almost fixed the same wrapping error with groups with events; trying to see where the overlap is

--- a/react-vite/src/components/Events/Events.css
+++ b/react-vite/src/components/Events/Events.css
@@ -23,18 +23,18 @@
 	padding-bottom: 150px;
 	padding-top: 50px;
 	flex-wrap: wrap;
-	gap: 50px;
+	gap: 30px;
 }
 
 .event-cards {
 	display: flex;
 	align-items: center;
-	width: 75vh;
-	/* max-width: 1850px; */
+	width: 100%;
+	max-width: 870px;
 	padding: 20px;
 	border-radius: 60px;
 	background: #dddddc;
-	height: 450px;
+	height: 500px;
 	margin: 8px;
 	flex-wrap: wrap;
 }
